# tfm_cristina_li

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  clone_repos.sh  data_tutorial.ipynb  extract_gene_exp.py  install_mamba_env.sh  main.py  mlp_playground.py  preprocess_raw_data_tnt.py  pyproject.toml  requirements.txt  setup.py  slurm-luis-norman.sh
.devcontainer/: devcontainer.json  post_create.sh  requirements_other.txt  requirements_torch.txt
causal_hts_modeling/: __init__.py  models.py  pertdata.py  utils.py
compass/: INSTALL.md  install_compass.sh
configs/: main.yaml  mlp_playground.yaml
data/: download_datasets.ipynb  kegg_gene_map.tsv
docker/: Dockerfile  requirements.txt  requirements_other.txt  requirements_torch.txt
docs/: lgem.md  linear_model.md  tadvae.md
gene_expression/: ensembl.ipynb  nomenclature.ipynb  nomenclature.py  pertdata.py  perturbation_data_analysis.ipynb  utils.py
jupyter_notebooks/: feature_representation.ipynb  gears_demo.ipynb  gears_evaluate.ipynb  lgem_run_demo.ipynb  metric_visual.ipynb  norman_clustering.ipynb  norman_reduced_creation.ipynb  results_overview.ipynb  results_single_overview.ipynb  sena_demo.ipynb  sena_evaluate.ipynb
metabolism/: cplex_studio.md
notebooks/: e_distance.ipynb  linear_model.ipynb  metavis_analysis.ipynb  pert_data_export.ipynb  test.ipynb
preprocess/: extract_gears_obs.py  norman.py  process_raw_data.py  utils.py
raw_data_converter/: raw_data_converter.ipynb  raw_data_converter.py  utils.py
resources/: README.md  ensembl_gene_info.tsv  ensembl_gene_map.tsv
scripts/: README.md  ensembl.py  generate_activation_scores.py  generate_ensembl_gene_info.py  generate_ensembl_gene_map.py  generate_msigdb_go_gene_map.py  get_sena_prediction.py
src/: general.py
todo/: raw_data_converter.ipynb
transmet/: autoencoder.py  compass.ipynb  mlp.py  nomenclature.ipynb  pertdata.py  perturbation_data_analysis.ipynb  perturbation_data_tutorial.ipynb  (+1 more)
(+123 files in other folders)
