[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transmet"
description = "Linking Perturbation Experiments to Metabolic Graphs Reveals Key Regulatory Mechanisms in Cellular Metabolism"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Jan Voges", email = "jvoges@external.unav.es" },
    { name = "Guillermo Dufort y Álvarez", email = "gdufortyalv@unav.es" },
]
dependencies = [
    "hatch",
    "ipykernel",
    "pertdata",
]
dynamic = [
    "version",
]

[project.urls]
Repository = "https://github.com/voges/transmet.git"

[tool.hatch.version]
path = "src/transmet/version.py"

[tool.ruff.lint]
extend-select = [
    # pycodestyle
    "E", "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D", "D401"
]

[tool.ruff.lint.pydocstyle]
# The Google convention includes all D errors apart from: D203, D204, D213, D215,
# D400, D401, D404, D406, D407, D408, D409, and D413.
convention = "google"
